src/auth/auth.scss
.imessage-auth {
  display: flex;
  flex-direction: column;
  max-width: 500px;

  h4 {
    margin-top: 0;
    margin-bottom: 10px;
    display: inline-block;
    font-weight: 500;
  }

  .fake-details,
  details {
    margin: 1em 0;
  }

  .fake-details,
  details[open] {
    margin-bottom: 2em;
  }

  .fake-summary,
  summary {
    background: rgba(var(--color-fg-rgb), 0.1);
    border-radius: 8px;
    padding: 8px 14px;
  }

  .fake-summary,
  details[open] summary {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }

  details,
  .fake-details {
    h4 {
      margin-top: 0;
      margin-bottom: 0;
      display: inline-block;
      font-weight: 500;
    }
  }

  .imessage-auth-well {
    padding: 16px;
    background: var(--prefs-well);
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
  }

  ul {
    padding: 0;
    list-style: none;

    li {
      margin-bottom: 8px;
    }
  }

  .show-more-button {
    font-size: 90%;
    opacity: .9;
  }

  .more {
    margin-bottom: 1em;
    line-height: 1.6;
  }

  .permissions-section {
    width: 100vw;
    max-width: 100%;
    line-height: 1.25em;
    cursor: default;

    .fake-summary {
      display: flex;
      justify-content: space-between;
      align-items: center;
      svg {
        margin-left: 4px;
        margin-right: 10px;
        margin-bottom: -2px;
      }
    }

    article {
      font-size: 14px;
      margin-bottom: 16px;
      .main {
        margin-bottom: 10px;
      }
    }
    article:last-child {
      margin-bottom: 0;
    }
    article>div {
      display: flex;
      align-items: center;
    }

    .check {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 20px;
      height: 20px;
      border-radius: 60px;
      border: 2px solid var(--color-primary);
      margin-left: auto;

      svg {
        font-size: 10px;
      }

      &.completed {
        background-color: var(--color-primary);
      }
    }

    svg.icon {
      font-size: 18px;
      vertical-align: middle;
      margin-right: 8px;
      margin-bottom: 1px;
      fill: currentColor;
    }
  }

  button.primary {
    width: 100%;
  }

  .info-icon {
    margin-left: 4px;
    margin-top: 2px;
  }
}

